@@ -6,12 +6,14 @@ DV just wants to be able to say
   "Hello I'm Daniel Veillard and I pronounce Sabayon 'Sa-ba-yon'"
 
 Something about french food too. Something about egg yolks and wine.
+http://www.ibiblio.org/expo/restaurant/chef/sabayon.html
 
 Dependencies
 ============
 
 For the GConf module you need GConf2-2.8.1-2 and gnome-python2-2.6.0-5
 from rawhide.
+You also need libxml2-python for XML parsing.
 
 You'll also need to put
 
