@@ -1,3 +1,8 @@
+Fri Jan 21 12:00:42 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* README: small update
+	* lib/dirmonitor.py: try to fix problem with older gnome-vfs bindings
+
 2005-01-21  Mark McLoughlin  <mark@skynet.ie>
 
 	* lib/userprofile.py: last few bits of the grand re-naming.
